--- a/DHT/package.json
+++ b/DHT/package.json
@@ -18,6 +18,7 @@
   "author": "Stiven Gonzalez",
   "license": "ISC",
   "dependencies": {
+    "kademlia-dht": "^0.1.0",
     "zeromq": "^6.0.0-beta.6"
   }
 }
